--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
         <label>Click to toggle the serial</label>
         <button id='button'onclick="toggleSerial()" >Button</button>
         <div id="serial_dataPanel">
-            Distance from sensor (cm):<label></label>
-            Distance from sensor (in):<label></label>
-            <p></p>
-            Acceleration(m/s^2):
-            x: <label></label>y: <label></label> z:<label></label>
-            <p></p>
-            Gyro(rad/s):
-            x: <label></label>y: <label></label> z:<label></label>
-            temperature:
+            <p>Distance from sensor (cm)||<label></label></p>
+            <p>Distance from sensor (in)||<label></label></p>
+            <p>Acceleration(m/s^2)|| x: <label></label>y: <label></label> z:<label></label></p>
+            <p>
+            Gyro(rad/s)|| x: <label></label>y: <label></label> z:<label></label>
+            </p>
+            Temperature||
             <label></label>
         </div>
     </body>
