all web functions should be working, pending other QOL enhancement

--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 <html>
     <body>
         <label>Click to toggle the serial</label>
-        <button id='button'onclick="toggleSerial()" style="background-color: red;">Disabled</button>
+        <button id='button' onclick="toggleSerial()" style="background-color: red;">Disabled</button>
         <div id="serial_dataPanel">
             <p>Distance from sensor (cm) || <label></label></p>
             <p>Distance from sensor (in) || <label></label></p>
-            <p>Acceleration(m/s^2) ||x: <label></label>y: <label></label> z:<label></label></p>
-            <p>
-            Gyro(rad/s) ||x: <label></label>y: <label></label> z:<label></label>
-            </p>
+            <p>Acceleration(m/s^2) ||x: <label></label> y: <label></label> z:<label></label></p>
+            <p>Gyro(rad/s) ||x: <label></label>y: <label></label> z:<label></label></p>
             Temperature ||
             <label></label>
         </div>
@@ -45,6 +43,13 @@
                 const data = await rspd.json();
                 cm = data.cm || 0;
                 inch = data.inch || 0;
+                a_x = data.a_x || 0;
+                a_y = data.a_y || 0;
+                a_z = data.a_z || 0;
+                g_x = data.g_x || 0;
+                g_y = data.g_y || 0;
+                g_z = data.g_z || 0;
+                temp = data.temp || 0;
             }catch (e){
                 console.error('Failed to fetch sensor data',e);
             }
