--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <!DOCTYPE html>
+<!--
+    TODO:
+    - sync the button with the serial status
+        - GET serial status
+        - update the button style
+    
+-->
+
 <html>
     <body>
         <label>Click to toggle the serial</label>
